config/services/termix/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: termix
  namespace: termix
spec:
  replicas: 1
  selector:
    matchLabels:
      app: termix
  template:
    metadata:
      labels:
        app: termix
    spec:
      containers:
        - name: termix
          image: ghcr.io/lukegus/termix:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
          volumeMounts:
            - name: termix-data-vol
              mountPath: /app/data
      volumes:
        - name: termix-data-vol
          persistentVolumeClaim:
            claimName: termix-data-pvc
