config/services/termix/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: termix-ingress
spec:
  rules:
  - host: rdp.x.tapeline.dev
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: termix-svc
            port:
              number: 8080
